<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.oracle</groupId>
    <artifactId>mongo2ora</artifactId>
    <version>1.3.1</version>
    <packaging>jar</packaging>

    <name>mongo2ora</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <main.class>com.oracle.mongo2ora.Main</main.class>
        <graalvm.version>22.3.1</graalvm.version>
        <!-- oracle.jdbc.version>21.9.0.0</oracle.jdbc.version -->
        <oracle.jdbc.version>23.3.0.23.09</oracle.jdbc.version>
        <oracle.jdbc.version_old>21.11.0.0</oracle.jdbc.version_old>

        <targetJavaVersion>21</targetJavaVersion>
        <maven.compiler.source>${targetJavaVersion}</maven.compiler.source>
        <maven.compiler.target>${targetJavaVersion}</maven.compiler.target>
        <maven.compiler.release>${targetJavaVersion}</maven.compiler.release>
    </properties>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-compress -->
        <!-- dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-compress</artifactId>
            <version>1.25.0</version>
        </dependency -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.36</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.7.36</version>
        </dependency>
	<dependency>
	    <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.20.0</version>
        </dependency>
        <dependency>
            <groupId>net.rubygrapefruit</groupId>
            <artifactId>native-platform</artifactId>
            <version>0.22-milestone-23</version>
        </dependency>
        <dependency>
            <groupId>net.rubygrapefruit</groupId>
            <artifactId>native-platform-windows-amd64</artifactId>
            <version>0.22-milestone-23</version>
        </dependency>
        <dependency>
            <groupId>net.rubygrapefruit</groupId>
            <artifactId>native-platform-osx-amd64</artifactId>
            <version>0.22-milestone-23</version>
        </dependency>
        <dependency>
            <groupId>net.rubygrapefruit</groupId>
            <artifactId>native-platform-osx-aarch64</artifactId>
            <version>0.22-milestone-23</version>
        </dependency>
        <dependency>
            <groupId>net.rubygrapefruit</groupId>
            <artifactId>native-platform-linux-amd64</artifactId>
            <version>0.22-milestone-23</version>
        </dependency>
        <dependency>
            <groupId>net.rubygrapefruit</groupId>
            <artifactId>native-platform-linux-amd64-ncurses6</artifactId>
            <version>0.22-milestone-23</version>
        </dependency>
        <dependency>
            <groupId>net.rubygrapefruit</groupId>
            <artifactId>native-platform-linux-aarch64</artifactId>
            <version>0.22-milestone-23</version>
        </dependency>
        <dependency>
            <groupId>net.rubygrapefruit</groupId>
            <artifactId>native-platform-linux-aarch64-ncurses6</artifactId>
            <version>0.22-milestone-23</version>
        </dependency>
        <dependency>
            <groupId>org.graalvm.sdk</groupId>
            <artifactId>graal-sdk</artifactId>
            <version>${graalvm.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.graalvm.nativeimage</groupId>
            <artifactId>svm</artifactId>
            <version>${graalvm.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>mongodb-driver-sync</artifactId>
            <version>4.6.1</version>
        </dependency>
        <dependency>
            <groupId>com.oracle.database.security</groupId>
            <artifactId>oraclepki</artifactId>
            <version>${oracle.jdbc.version}</version>
        </dependency>
        <dependency>
            <groupId>com.oracle.database.security</groupId>
            <artifactId>osdt_core</artifactId>
            <version>${oracle.jdbc.version_old}</version>
        </dependency>
        <dependency>
            <groupId>com.oracle.database.security</groupId>
            <artifactId>osdt_cert</artifactId>
            <version>${oracle.jdbc.version_old}</version>
        </dependency>
        <!-- dependency>
            <groupId>com.oracle.database.observability</groupId>
            <artifactId>dms</artifactId>
            <version>${oracle.jdbc.version}</version>
        </dependency -->
        <!-- dependency>
            <groupId>com.oracle.database.observability</groupId>
            <artifactId>ojdbc11dms</artifactId>
            <version>${oracle.jdbc.version}</version>
        </dependency -->
        <!-- ..\mvnw install:install-file -Dfile=ojdbc11-21.9.0.1.jar -DgroupId=com.oracle.database.jdbc -DartifactId=ojdbc11 -Dversion=21.9.0.1 -Dpackaging=jar -->
        <dependency>
            <groupId>com.oracle.database.jdbc</groupId>
            <artifactId>ojdbc11</artifactId>
            <version>23.3.0.23.11</version>
            <!-- version>${oracle.jdbc.version}</version -->
<!--            <version>23.4.0.0</version>-->
        </dependency>
        <dependency>
            <groupId>com.oracle.database.xml</groupId>
            <artifactId>xdb</artifactId>
            <version>${oracle.jdbc.version}</version>
        </dependency>
        <!-- ..\mvnw install:install-file -Dfile=ucp-21.9.0.1.jar -DgroupId=com.oracle.database.jdbc -DartifactId=ucp -Dversion=21.9.0.1 -Dpackaging=jar -->
        <dependency>
            <groupId>com.oracle.database.jdbc</groupId>
            <artifactId>ucp</artifactId>
            <version>23.3.0.23.11</version>
            <!-- version>${oracle.jdbc.version}</version -->
<!--            <version>23.4.0.0</version>-->
        </dependency>
        <!-- dependency>
            <groupId>com.oracle.database.ha</groupId>
            <artifactId>ons</artifactId>
            <version>${oracle.jdbc.version}</version>
            <!- - version>19.15.0.0.1</version - ->
        </dependency -->
        <!--dependency>
            <groupId>com.oracle.</groupId>
            <artifactId>ojdl</artifactId>
            <version>${oracle.jdbc.version}</version>
        </dependency-->
        <dependency>
            <groupId>com.oracle.database.soda</groupId>
            <artifactId>orajsoda</artifactId>
            <version>1.1.20</version>
            <exclusions>
                <exclusion>
                    <groupId>com.oracle.database.jdbc</groupId>
                    <artifactId>ojdbc8</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>5.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish</groupId>
            <artifactId>javax.json</artifactId>
            <version>1.1.4</version>
        </dependency>
        <dependency>
            <groupId>jakarta.json</groupId>
            <artifactId>jakarta.json-api</artifactId>
            <version>2.1.1</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.parsson</groupId>
            <artifactId>parsson</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jdk8</artifactId>
            <version>2.14.2</version>
        </dependency>

    </dependencies>

    <repositories>
        <repository>
            <id>gradle-release</id>
            <url>https://repo.gradle.org/artifactory/libs-releases</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>graalvm-native-build-tools-snapshots</id>
            <name>GraalVM native-build-tools Snapshots</name>
            <url>https://raw.githubusercontent.com/graalvm/native-build-tools/snapshots</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <extensions>
            <extension>
                <groupId>kr.motd.maven</groupId>
                <artifactId>os-maven-plugin</artifactId>
                <version>1.6.1</version>
            </extension>
        </extensions>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
		<version>3.10.1</version>
		<configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.oracle.mongo2ora.Main</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.graalvm.buildtools</groupId>
                <artifactId>native-maven-plugin</artifactId>
                <version>0.9.21</version> <!-- see: https://graalvm.github.io/native-build-tools/latest/index.html -->
                <extensions>true</extensions>
                <executions>
                    <execution>
                        <id>build-native</id>
                        <goals>
                            <goal>build</goal>
                        </goals>
                        <phase>package</phase>
                    </execution>
                    <execution>
                        <id>test-native</id>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <phase>test</phase>
                    </execution>
                </executions>
                <configuration>
                    <skip>false</skip>
                    <imageName>mongo2ora-${os.detected.classifier}</imageName>
                    <mainClass>com.oracle.mongo2ora.Main</mainClass>
                    <quickBuild>false</quickBuild>
                    <verbose>true</verbose>
                    <fallback>false</fallback>
                    <useArgFile>false</useArgFile>
                    <buildArgs>
                        <buildArg>--no-fallback</buildArg>
                        <buildArg>--enable-preview</buildArg>
                        <buildArg>-H:+ReportExceptionStackTraces</buildArg>
                        <buildArg>-H:+AddAllCharsets</buildArg>
                        <buildArg>-Doracle.jdbc.fanEnabled=false</buildArg>
                        <buildArg>-Dnetworkaddress.cache.ttl=0</buildArg>

                        <!-- Serial GC -->
                        <!-- buildArg>- -gc=serial</buildArg>
                        <buildArg>-R:MaximumHeapSizePercent=95</buildArg -->

                        <!-- G1 GC -->
                        <buildArg>--gc=G1</buildArg>
                        <buildArg>-H:G1HeapRegionSize=32M</buildArg>
                        <buildArg>-H:-UseCompressedReferences</buildArg>
                        <buildArg>-H:+NativeArchitecture</buildArg>
                        <buildArg>-H:+OptStringConcat</buildArg>
                        <buildArg>-H:-OutlineStringBuilderAppends</buildArg>
			
			<!-- Perf debug -->
			<!-- buildArg>-H:-DeleteLocalSymbols</buildArg>
			<buildArg>-H:Debug=1</buildArg -->

                        <!-- Profile Guided Optimization, GraalVM EE only -->
                        <!-- buildArg>- -pgo-instrument</buildArg -->
			<!-- buildArg>- -pgo=../3newintrinsicsprofile.iprof</buildArg -->
			<buildArg>--pgo=${project.basedir}/profile-22.3.0.iprof</buildArg>

                        <!-- buildArg>-XX:+UnlockExperimentalVMOptions</buildArg>
                        <buildArg>-XX:G1MaxNewSizePercent=80</buildArg -->


                        <!-- buildArg>-link-at-build-time</buildArg -->
                        <buildArg>--report-unsupported-elements-at-runtime</buildArg>
                        <buildArg>--enable-all-security-services</buildArg>
                        <buildArg>-H:EnableURLProtocols=https</buildArg>
                        <buildArg>-H:ConfigurationFileDirectories=../src/main/resources/META-INF/native-image</buildArg>
                        <buildArg>-H:-CheckToolchain</buildArg>
                        <buildArg>--initialize-at-build-time=sun.instrument.InstrumentationImpl</buildArg>
                        <!-- buildArg>-initialize-at-run-time=oracle.dms.console.DMSConsole</buildArg -->
                        <buildArg>--features=oracle.nativeimage.CharacterSetFeature</buildArg>
                        <buildArg>--features=oracle.nativeimage.NativeImageFeature</buildArg>
                        <buildArg>--trace-class-initialization=oracle.sql.CharacterSet</buildArg>
                        <buildArg>--initialize-at-build-time=oracle.sql.CharacterSet</buildArg>
                        <buildArg>--initialize-at-build-time=oracle.sql.ConverterArchive</buildArg>
                        <buildArg>--initialize-at-build-time=oracle.sql.CharacterSet$CharacterSetNamesMapHolder</buildArg>
                        <!-- buildArg>- -initialize-at-run-time=oracle.xdb.XMLType</buildArg-->
                        <!-- buildArg>- -initialize-at-run-time=oracle.ucp.jdbc.oracle.ONSOracleFailoverEventSubscriber</buildArg-->
                        <!-- buildArg>- -initialize-at-run-time=oracle.ucp.admin.UniversalConnectionPoolManagerBase</buildArg-->
                        <!-- buildArg>- -initialize-at-run-time=oracle.ucp.jdbc.oracle.ONSDatabaseEventHandlerTask</buildArg-->
                        <!-- - buildArg>-initialize-at-run-time=oracle.dms.instrument.Level</buildArg -->
                        <!-- buildArg>- -initialize-at-run-time=oracle.net.nt.MQLNTAdapter</buildArg-->
                        <buildArg>--initialize-at-build-time=oracle.net.jdbc.nl.mesg.NLSR</buildArg>
                    </buildArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
